--- a/_posts/2024-01-27-first.md
+++ b/_posts/2024-01-27-first.md
@@ -4,4 +4,8 @@ title:  "첫 포스팅"
 ---
 # 첫 블로그 시작
 
-앞으로 열심히 해보겠습니다.![sqld사진](C:\workspace\yoodab-github-blog\yoodab.github.io\images\2024-01-27-first\sqld사진.png)
+앞으로 열심히 해보겠습니다.!
+
+
+
+![프사1](C:\workspace\yoodab-github-blog\yoodab.github.io\images\2024-01-27-first\프사1.jpg)
