이미지 적용

--- a/_posts/2024-01-27-first.md
+++ b/_posts/2024-01-27-first.md
@@ -8,4 +8,4 @@ title:  "첫 포스팅"
 
 
 
-![프사1](C:\workspace\yoodab-github-blog\yoodab.github.io\images\2024-01-27-first\프사1.jpg)
+![프사1](../images/2024-01-27-first/프사1-1706532144484-3.jpg)
