--- a/_posts/2024-01-27-first.md
+++ b/_posts/2024-01-27-first.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title:  "첫 포스팅"
+typora-root-url: ../
 ---
 # 첫 블로그 시작
 
@@ -8,4 +9,4 @@ title:  "첫 포스팅"
 
 
 
-![프사1](../images/2024-01-27-first/프사1-1706532144484-3.jpg)
+![프사3](/images/2024-01-27-first/프사3.jpg)
